# openambit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Mac.cmake  README  README.md  README.rst  build.sh  index.html  install.sh  params.json  run.sh  test.sh
src/: CMakeLists.txt
src/example/: CMakeLists.txt  ambitconsole.c
src/example/cmake/: Findlibambit.cmake
src/libambit/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  crc16.c  crc16.h  custom_mode_serialize.c  custom_mode_serialize.h  debug.c  debug.h  device_driver.h  device_driver_ambit.c  device_driver_ambit3.c  device_driver_ambit_navigation.c  device_driver_ambit_navigation.h  device_driver_common.c  device_driver_common.h  device_support.c  device_support.h  distance.c  distance.h  endian.h  libambit-structs.h  libambit-types.h  libambit.c  libambit.h  libambit.rules  libambit_int.h  personal.c  personal.h  pmem20.c  pmem20.h  protocol.c  protocol.h  sbem0102.c  sbem0102.h  sha256.c  sha256.h  sport_mode_serialize.c  sport_mode_serialize.h  utils.c  (+1 more)
src/libambit/cmake/: FindUDev.cmake  Findiconv.cmake  Findlibusb.cmake  HidapiDriver.cmake
src/libambit/debian/: changelog  control  copyright  libambit-dev.install  libambit0.install
src/libambit/hidapi/: hid-libusb.c  hid-linux.c  hid-mac.c  hid-pcapsimulate.c  hid-windows.c  hidapi.h
src/movescount/: CMakeLists.txt  custommode.cpp  custommode.h  custommodegroup.cpp  custommodegroup.h  deviceinfo.cpp  deviceinfo.h  logentry.cpp  logentry.h  logstore.cpp  logstore.h  movescount.cpp  movescount.h  movescountjson.cpp  movescountjson.h  movescountlogchecker.cpp  movescountlogchecker.h  movescountlogdirentry.h  movescountsettings.cpp  movescountsettings.h  movescountxml.cpp  movescountxml.h  sportmode.cpp  sportmode.h  sportmodegroup.cpp  sportmodegroup.h
src/openambit/: CMakeLists.txt  confirmbetadialog.cpp  confirmbetadialog.h  confirmbetadialog.ui  deviceinfo.cpp  deviceinfo.h  devicemanager.cpp  devicemanager.h  logentry.cpp  logentry.h  logstore.cpp  logstore.h  logview.cpp  logview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movescount.cpp  movescount.h  movescountjson.cpp  movescountjson.h  movescountlogdirentry.cpp  movescountlogdirentry.h  movescountxml.cpp  movescountxml.h  openambit.pro  resources.qrc  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  signalhandler.cpp  signalhandler.h  single_application.cpp  single_application.h  udevlistener.cpp  udevlistener.h
src/openambit-cli/: .gitignore  CMakeLists.txt  Task.cpp  Task.h  main.cpp
src/openambit-cli/cmake/: FindMovescount.cmake  FindUDev.cmake
src/openambit-routes/: CMakeLists.txt  Task.cpp  Task.h  main.cpp
src/openambit/cmake/: FindMovescount.cmake  Findlibambit.cmake
src/openambit/debian/: changelog  control  copyright
src/openambit/deployment/: 99-suunto-ambit.rules  openambit.appdata.xml  openambit.desktop
src/openambit/movescount/: CMakeLists.txt  include.pri  movescount.cpp  movescount.h  movescountjson.cpp  movescountjson.h  movescountlogchecker.cpp  movescountlogchecker.h  movescountxml.cpp
src/openambit/translations/: openambit_de.ts  openambit_fr.ts  openambit_it.ts  openambit_ja.ts  openambit_nb_NO.ts  openambit_nl.ts  openambit_pl.ts  openambit_ru.ts  openambit_ru.ts.xml  openambit_sv.ts
src/unittest/: CMakeLists.txt  doctest.h
src/unittest/cmake/: Findlibambit.cmake
src/unittest/libambit/: crc16_test.cpp  device_support_test.cpp  sport_mode_serialize_test.cpp  utils-test.cpp
src/unittest/movescount/: logentry_test.cpp  logstore_test.cpp  movescount_test.cpp  movescountjson_test.cpp  movescountlogchecker_test.cpp  movescountsettings_test.cpp  movescountxml_test.cpp  sportmode_test.cpp
test-data/: ambit.pcap  ambit2.pcap  test-settings-nologgedrules.json  test-settings.json  testlog.gpx
tools/: CMakeLists.txt  GpxExtensionsv3.xsd  TrackPointExtensionv2.xsd  gpxdata10.xsd  movescountXmlDiff.pl  openambit2gpx.py  openambit2tcx-lap.py  openambit2tcx-nolap.py  strava_upload.sh
tools/stravauploader/: README.md  config.py  strava_uploader.py
wireshark_dissector/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  ambit-dissector.c  moduleinfo.h
wireshark_dissector/cmake/: FindWireshark.cmake  UseMakeDissectorReg.cmake
wireshark_dissector/tools/: make-dissector-reg.py
